<resources>
    <string name="server_client_id" translatable="false">3469597538-3qrmdto3dpc5h0qamott23e15o1n2232.apps.googleusercontent.com</string>
    <string name="app_name_string">Uniflow</string>
    <string name="client_id" translatable="false">3469597538-k5g26uarglsbthgd07aedo1d14e1ef8v.apps.googleusercontent.com</string>
    <string name="client_secret" translatable="false">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</string>
    <string name="grant_type" translatable="false">authorization_code</string>
    <string name="facebook_app_id" translatable="false">3934643130095018</string>
    <string name="facebook_client_token">17e05bd37efdd7f6c2249ea8bac773ba</string>
    <string name="fb_login_protocol_scheme" translatable="false">fb3934643130095018</string>
    <string name="uber_app_id" translatable="false">Ay_ZZ4VtW4q0_70sWJCCxnHFlecshBAA</string>
    <string name="weather_api_key" translatable="false">1ddff9b59a618f39d6dbd200cd0c2af5</string>
    <string name="facebook_app_secret" translatable="false">87a6943c13ebd70fa7f6933697034b93</string>
    <string name="you_tube_api_key" translatable="false">AIzaSyDkdfsgTnTSDSLAY0RPs5hRb3ImCzWG5lY</string>
    <string name="googleApiKey" translatable="false">AIzaSyDGeKoAi5hRTWLGaUV3G-1QJmUx1FwOt3I</string>
    <string name="firebaseApiKey" translatable="false">AIzaSyDBw0TuE7FQUC518wnfEBUjA5CJA3u1MbQ</string>
    <string name="seatics_dev_api_key" translatable="false">"QgtuDr9cN1Vrt3VBRUv4_QMjrfAa"</string>
    <string name="seatics_prod_api_key" translatable="false">"cgYu0n4HFoyzi5aUI0n4frhJkDYa"</string>
    <string name="mapbox_access_token" translatable="false">pk.eyJ1IjoiZXZlbnoxIiwiYSI6ImNrem40ZHM3YTJ0bDEyb28weHBlaGE3d2UifQ.lj-Q59-HzNo4UIK9ZJLcPg</string>
    <string name="google_play_url" translatable="false"><![CDATA["https://play.google.com/store/apps/details?id=com.evenzgroup.evenz&pcampaignid=MKT–Other–global-all-co-prtnr-py-PartBadge-Mar2515-1"]]></string>
    <string name="terms_url" translatable="false">"https://www.evenz.co/#/TermsOfUse"</string>
    <string name="privacy_policy_url" translatable="false">"https://www.evenz.co/#/Privacy</string>
    <string name="app_terms">By using Evenz, you agree to our <u>Terms</u> &amp; <u>Privacy Policy</u></string>
    <string name="cancel">Cancel</string>
    <string name="yes">YES</string>
    <string name="no">NO</string>
    <string name="include">Include</string>
    <string name="popular">Popular</string>
    <string name="no_city">No city</string>
    <string name="account_name">Name</string>
    <string name="account_surname">Surname</string>
    <string name="account_email">Email</string>
    <string name="account_location">Location</string>
    <string name="account_share_app">Share app</string>
    <string name="account_rate_app">Rate app</string>
    <string name="account_privacy">Privacy Policy</string>
    <string name="account_terms">Terms </string>
    <string name="account_logout">Logout</string>
    <string name="account_delete">Delete Account</string>
    <string name="account_logout_dialog">Are you sure want to logout?</string>
    <string name="account_delete_dialog">Are you sure want to delete your account?</string>
    <string name="profile_tab_suggested">Suggested</string>
    <string name="profile_tab_liked">Liked</string>
    <string name="profile_tab_tracking">Tracking</string>
    <string name="checkout_seller_notes_text">Seller Notes</string>
    <string name="no_events_search">"There are no events according selected location 😥"</string>
    <string name="checkout_e_tickets_text">E-Tickets</string>
    <string name="checkout_tickets_text">Add Number of Tickets</string>
    <string name="checkout_add_promo_code_text">Add Promo Code (Optional)</string>
    <string name="checkout_ticket_price_text">Ticket price</string>
    <string name="checkout_ticket_price">$0</string>
    <string name="checkout_fee_text">"Fees"</string>
    <string name="checkout_fee">$0</string>
    <string name="checkout_total_price_text">Total</string>
    <string name="checkout_terms_text">"By purchasing a ticket, you agree to have an account with tickets and be bound to the <u>Terms of Use</u> and <u>Privacy Policy</u>"</string>
    <string name="checkout_pay_button">PAY</string>
    <string name="details_show_all_tickets">Buy Ticket</string>
    <string name="details_show_more_dates">Show more dates</string>
    <string name="landing_no_events_text">This performer doesn\'t have any events.</string>
    <string name="landing_all_events_text">Upcoming Events</string>
    <string name="login_sign_up_text">Sign Up</string>
    <string name="login_text">Login</string>
    <string name="login_or_text">or</string>
    <string name="login_with_facebook_text">Login with Facebook</string>
    <string name="login_with_google_text">Sign in with Google</string>
    <string name="tickets_filter_text">Filters</string>
    <string name="filters_title">Filters</string>
    <string name="filters_quantity">Quantity</string>
    <string name="filters_price_range">Price range</string>
    <string name="filters_parking">Parking</string>
    <string name="filters_ada_tickets">ADA tickets</string>
    <string name="filters_reset">Reset</string>
    <string name="check_your_email">Check your email!</string>
    <string name="we_have_just_send_you_an_email_with_a_code_to_reset_your_password">We have just send you an email with a code to reset your password.</string>
    <string name="resend">Resend</string>
    <string name="new_password">New Password</string>
    <string name="repeat_new_password">Repeat new Password</string>
    <string name="amount_of_tickets">Amount of tickets</string>
    <string name="forgot_password">Forgot password</string>
    <string name="enter_the_email_address_you_registered_and_we_ll_send_you_instructions_to_reset_your_password">Enter the email address you registered and we\'ll send you instructions to reset your password.</string>
    <string name="login">Login</string>
    <string name="continue_with_facebook">Facebook</string>
    <string name="continue_with_google">Google</string>
    <string name="or">or</string>
    <string name="login_with_email">Login with email</string>
    <string name="next">Next</string>
    <string name="no_notifications_title">No new notifications</string>
    <string name="no_notifications_text">We’ll notify you when\nsomething arrives</string>
    <string name="payment_nsuccesfull">Payment succesfull</string>
    <string name="get_your_receipt">Get your receipt</string>
    <string name="sms">SMS</string>
    <string name="see_my_ticket">See my ticket</string>
    <string name="no_events_here">No events here</string>
    <string name="sign_up">Sign up</string>
    <string name="sign_up_with_email">Sign up with email</string>
    <string name="please_enter_your_email_address_below_then_we_ll_send_you_a_erification_code">Please enter your email address below. Then we\'ll send you a verification code.</string>
    <string name="we_have_just_send_you_a_code_to_your_email_please_add_the_code_here">"We have just send you a code to your email - please add the code here."</string>
    <string name="last_name">Last name</string>
    <string name="your_order_n_has_been_placed_n_succesfully">Your order   has been placed   successfully</string>
    <string name="order_history">Order History</string>
    <string name="uh_oh_n_something_n_goes_wrong">Uh-oh   something   goes wrong</string>
    <string name="would_you_mind_n_try_it_again">Would you mind   try it again</string>
    <string name="retry">Retry</string>
    <string name="music">Music</string>
    <string name="card_credentials">Add credit card</string>
    <string name="account_change_password">Change password</string>
    <string name="account_payment_method">Payment method</string>
    <string name="title_activity_ticket_details">DetailsOrderActivity</string>
    <string name="title_activity_pre_navigation">PreNavigationActivity</string>
    <string name="description_stub">Apparently we had reached a great height in the atmosphere, for the sky was a dead black, and the stars had ceased to twinkle. By the same illusion which lifts the horizon of the sea to the level of the spectator on a hillside, the sable cloud beneath was dished out, and the car seemed to float in the middle of an immense dark sphere, whose upper half was strewn with silver. Looking down into the dark gulf below, I could see a ruddy light streaming through a rift in the clouds.</string>
    <string name="navigation_title">Navigation</string>
    <string name="mapbox_button_text">Mapbox</string>
    <string name="google_maps_button_text">Google Maps</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="request_a_ride_title">Request a Ride</string>
    <string name="ride_there_with_uber_button_text">Ride there with Uber</string>
    <string name="navigate_button_text">Navigate</string>
    <string name="ride_button_text">Ride</string>
    <string name="show_tickets_button_text">Show tickets</string>
    <string name="view_all_text">View all</string>
    <string name="account_title">Account</string>
    <string name="phone_label">Phone</string>
    <string name="address_label">Address</string>
    <string name="appearance_label">Appearance</string>
    <string name="light_mode_text">Light</string>
    <string name="night_mode_text">Night</string>
    <string name="automatic_mode_text">Automatic</string>
    <string name="change_email_title">In order to change your email address, please, input your new email address and confirmation code</string>
    <string name="change_email_edit_text_hint">Email address</string>
    <string name="confirm_code_edit_text_hint">Confirmation code</string>
    <string name="save_button_text">Save</string>
    <string name="email_title">Email</string>
    <string name="name_title">Name</string>
    <string name="change_name_title">In order to change you full name, please, input your first name and second name</string>
    <string name="change_first_name_hint">First name</string>
    <string name="change_second_name_hint">Second name</string>
    <string name="phone_number_title">Phone Number</string>
    <string name="change_phone_number_title">In order to change your phone number, please, input your new phone number and confirmation code</string>
    <string name="phone_number_hint">Phone number</string>
    <string name="tax_label">Tax</string>
    <string name="discount_label">Discount</string>
    <string name="mobile_transfer_label">Mobile Transfer</string>
    <string name="login_button_text">Login</string>
    <string name="add_payment_details_label">Add Payment details</string>
    <string name="add_contact_info_label">Add Contact info</string>
    <string name="payment_label_phone_number">Phone Number</string>
    <string name="payment_hint_phone">Phone</string>
    <string name="payment_button_send_sms">Send SMS</string>
    <string name="payment_button_sms_code">SMS code</string>
    <string name="location">Location</string>
    <string name="uber_button_text">Uber</string>
    <string name="maps_button_text">Google Maps</string>
    <string name="golden_age_cinema">Golden Age Cinema:</string>
    <string name="distance_value">4 miles</string>
    <string name="maybe_later_button_text">Maybe Later</string>
    <string name="no_access_to_location">No access to location</string>
    <string name="we_don_t_have_access_to_your_calendar_you_can_enable_access_in_privacy_settings">We don\'t have access to your calendar. You can enable access in privacy settings.</string>
    <string name="open_privacy_settings_button_text">Open privacy settings</string>
    <string name="more">More</string>
    <string name="share_with">Share with</string>
    <string name="telegram">Telegram</string>
    <string name="twitter">Twitter</string>
    <string name="whatsapp">Whatsapp</string>
    <string name="email_share">E-mail</string>
</resources>