<?xml version="1.0" encoding="utf-8"?>
<layout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:map="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.appcompat.widget.LinearLayoutCompat
        android:id="@+id/bottom_sheet_detail_map"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@drawable/bottom_sheet_rounded"
        android:orientation="vertical"
        app:behavior_hideable="true"
        app:behavior_peekHeight="0dp"
        app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior">

        <include
            android:id="@+id/bottom_sheet_slide_button"
            layout="@layout/view_notch" />

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginTop="@dimen/padding_25"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_marginBottom="@dimen/offset16"
            android:orientation="horizontal">

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/direction_tv"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="@dimen/padding_4"
                android:fontFamily="@font/sfprodisplaymedium"
                android:text="@string/location"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text_size_16"
                tools:textColor="@color/black" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/place_name"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/direction_tv"
                android:layout_alignParentStart="true"
                android:layout_marginEnd="@dimen/padding_8"
                android:layout_toStartOf="@+id/distance_tv"
                android:fontFamily="@font/sfprodisplayregular"
                android:text="@string/golden_age_cinema"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_14" />

            <androidx.appcompat.widget.AppCompatTextView
                android:id="@+id/distance_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@+id/direction_tv"
                android:layout_alignBaseline="@+id/place_name"
                android:layout_alignParentEnd="true"
                android:layout_centerVertical="true"
                android:layout_marginStart="@dimen/padding_6"
                android:fontFamily="sans-serif"
                android:text="@string/distance_value"
                android:textColor="@color/text_secondary"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone" />

        </RelativeLayout>

        <androidx.cardview.widget.CardView
            android:id="@+id/map_card_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/padding_16"
            android:layout_marginEnd="@dimen/padding_16"
            android:layout_marginBottom="@dimen/padding_8"
            android:gravity="end"
            app:cardCornerRadius="20dp">

            <com.mapbox.maps.MapView
                android:id="@+id/map_view"
                android:layout_width="match_parent"
                android:layout_height="@dimen/ticket_map_height"
                map:liteMode="true"
                map:mapType="normal" />

        </androidx.cardview.widget.CardView>

        <androidx.appcompat.widget.LinearLayoutCompat
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/request_button"
                android:layout_width="0dp"
                android:layout_height="@dimen/button_normal_height"
                android:layout_marginStart="@dimen/padding_16"
                android:layout_marginTop="@dimen/padding_16"
                android:layout_marginEnd="@dimen/padding_8"
                android:layout_marginBottom="@dimen/padding_16"
                android:backgroundTint="@color/black"
                android:fontFamily="sans-serif"
                android:insetTop="0dp"
                android:insetBottom="0dp"
                android:text="@string/uber_button_text"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="@dimen/text_size_14"
                android:visibility="gone"
                app:cornerRadius="20dp"
                app:icon="@drawable/ic_uber"
                app:iconGravity="textStart"
                app:iconTint="@color/white" />

            <androidx.appcompat.widget.AppCompatButton
                android:id="@+id/navigate_button"
                android:layout_width="match_parent"
                android:layout_height="@dimen/button_normal_height"
                android:layout_marginStart="@dimen/padding_8"
                android:layout_marginTop="@dimen/padding_16"
                android:layout_marginEnd="@dimen/padding_16"
                android:layout_marginBottom="@dimen/padding_16"
                android:background="@drawable/back_button_pdf"
                android:drawableStart="@drawable/ic_google"
                android:gravity="center"
                android:fontFamily="@font/sfprodisplaymedium"
                android:paddingHorizontal="@dimen/offset24"
                android:text="@string/maps_button_text"
                android:textAllCaps="false"
                android:textColor="@color/text_primary"
                android:textSize="@dimen/text15" />

        </androidx.appcompat.widget.LinearLayoutCompat>

    </androidx.appcompat.widget.LinearLayoutCompat>
</layout>